--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
                     <div class="card-body text-white">
                         <p class="p-5">The official provider of railway parts and services to the State Railway of Thailand</p>
                         <ul class="list-group list-group-flush h1 p-5">
-                            <li class="list-group-item noBackgroundColor"><a class="text-decoration-none" href="projectmManagement.html"><sup>01</sup> Project Management</a></li>
+                            <li class="list-group-item noBackgroundColor"><a class="text-decoration-none" href="projectManagement.html"><sup>01</sup> Project Management</a></li>
                             <li class="list-group-item noBackgroundColor"><sup>02</sup> Supplier Management</li>
                             <li class="list-group-item noBackgroundColor"><sup>03</sup> Letter Of Guatantee</li>
                             <li class="list-group-item noBackgroundColor"><sup>04</sup> IOU</li>
