--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,10 +8,10 @@
         
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="projectmManagement.html">Project Management</a>
+                <a class="nav-link" href="projectManagement.html">Project Management</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Supplier Management</a>
