--- a/templates/projectManagement.html
+++ b/templates/projectManagement.html
@@ -49,7 +49,7 @@
         <div class="card bg-dark text-white">
           <div class="card-body" style="background-color: rgba(0, 0, 0, 0.3);">
             <div class="d-flex flex-column">
-              <h5><i class="bi bi-clipboard2-check"></i> Letter Of Guarantee</h5>
+              <h5><i class="bi bi-clipboard2-check"></i> Project Management</h5>
             </div>
             <ul class="menu-list flex-grow-1 mt-3 list-unstyled">
               <li class="collapsed">
@@ -58,10 +58,21 @@
                     class="arrow icofont-dotted-down ms-auto text-end fs-5"></span></a>
                 <!-- Menu: Sub menu ul -->
                 <ul class="sub-menu collapse show" id="dashboard-Components">
-                  <li><a class="ms-link" href="LOGManagement.html">
-                      <span>Letter View</span></a></li>
-                  <li><a class="ms-link" href="logDetail.html">
-                      <span>Letter Detail</span></a></li>
+                  <li><a class="ms-link" href="#">
+                      <span>Project Dashboard</span></a></li>
+                </ul>
+              </li>
+              <li class="collapsed">
+                <a class="m-link" data-bs-toggle="collapse" data-bs-target="#project-Components" href="#"
+                  aria-expanded="true">
+                  <i class="icofont-briefcase"></i><span>Projects</span> <span
+                    class="arrow icofont-dotted-down ms-auto text-end fs-5"></span></a>
+                <!-- Menu: Sub menu ul -->
+                <ul class="sub-menu collapse show" id="project-Components" style="">
+                  <li><a class="ms-link" href="#"><span>Projects</span></a>
+                  </li>
+                  <li><a class="ms-link" href="#"><span>BOQ</span></a>
+                  </li>
                 </ul>
               </li>
             </ul>
@@ -73,17 +84,17 @@
           <div class="card-body">
 
             <div class="w-100 d-flex flex-row justify-content-between my-2">
-              <h3>Letter Of Guarantee</h3>
-              <button class="btn btn-primary" onclick="window.location.href='createLog.html'"><i
-                  class="bi bi-plus-circle-fill"></i> Add Letter</button>
+              <h3>Project Management</h3>
+              <button class="btn btn-primary" onclick="window.location.href='createProject.html'"><i
+                  class="bi bi-plus-circle-fill"></i> Add Project</button>
             </div>
             <div class="table-responsive">
               <table class="table" id="IOUList">
                 <thead>
                   <tr>
-                    <th>Letter ID</th>
+                    <th>Project No</th>
                     <th>Project</th>
-                    <th>Amount</th>
+                    <th>BOQ Budget</th>
                     <th>Created Date</th>
                     <th>Status</th>
                     <th>Actions</th>
@@ -91,14 +102,15 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th>#TC-0001</th>
-                    <td>Project 1</td>
+                    <th>0001</th>
+                    <td><a href="projectDetail.html" class="text-primary">Project 1</a></td>
                     <td>1,000,0000</td>
                     <td>25/02/2021</td>
                     <td><span class="badge badge-success">Completed</span></td>
                     <td class="text-right">
                       <div class="btn-group" role="group" aria-label="actionsButton">
-                        <a class="btn btn-outline-info" href="logDetail.html"><i class="bi bi-eye"></i></a>
+                        <button type="button" class="btn btn-outline-success"><i class="bi bi-check-circle"></i></button>
+                        <button type="button" class="btn btn-outline-danger"><i class="bi bi-x-circle"></i></button>
                         <button type="button" class="btn btn-outline-warning"><i
                             class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-danger"><i class="bi bi-trash3"></i></button>
@@ -106,14 +118,15 @@
                     </td>
                   </tr>
                   <tr>
-                    <th>#TC-0002</th>
-                    <td>Project 2</td>
+                    <th>0002</th>
+                    <td><a href="projectDetail.html" class="text-primary">Project 2</a></td>
                     <td>1,000,0000</td>
                     <td>12/03/2021</td>
-                    <td><span class="badge badge-warning">In Guarantee</span></td>
+                    <td><span class="badge badge-warning">In Progress</span></td>
                     <td class="text-right">
                       <div class="btn-group" role="group" aria-label="actionsButton">
-                        <a class="btn btn-outline-info" href="logDetail.html"><i class="bi bi-eye"></i></a>
+                        <button type="button" class="btn btn-outline-success"><i class="bi bi-check-circle"></i></button>
+                        <button type="button" class="btn btn-outline-danger"><i class="bi bi-x-circle"></i></button>
                         <button type="button" class="btn btn-outline-warning"><i
                             class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-danger"><i class="bi bi-trash3"></i></button>
@@ -121,14 +134,15 @@
                     </td>
                   </tr>
                   <tr>
-                    <th>#TC-0003</th>
-                    <td>Project 3</td>
+                    <th>0003</th>
+                    <td><a href="projectDetail.html" class="text-primary">Project 3</a></td>
                     <td>1,000,0000</td>
                     <td>16/02/2021</td>
                     <td><span class="badge badge-success">Completed</span></td>
                     <td class="text-right">
                       <div class="btn-group" role="group" aria-label="actionsButton">
-                        <a class="btn btn-outline-info" href="logDetail.html"><i class="bi bi-eye"></i></a>
+                        <button type="button" class="btn btn-outline-success"><i class="bi bi-check-circle"></i></button>
+                        <button type="button" class="btn btn-outline-danger"><i class="bi bi-x-circle"></i></button>
                         <button type="button" class="btn btn-outline-warning"><i
                             class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-danger"><i class="bi bi-trash3"></i></button>
@@ -136,14 +150,15 @@
                     </td>
                   </tr>
                   <tr>
-                    <th>#TC-0004</th>
-                    <td>Project 4</td>
+                    <th>0004</th>
+                    <td><a href="projectDetail.html" class="text-primary">Project 4</a></td>
                     <td>1,000,0000</td>
                     <td>16/03/2021</td>
-                    <td><span class="badge badge-warning">In Guarantee</span></td>
+                    <td><span class="badge badge-warning">In Progress</span></td>
                     <td class="text-right">
                       <div class="btn-group" role="group" aria-label="actionsButton">
-                        <a class="btn btn-outline-info" href="logDetail.html"><i class="bi bi-eye"></i></a>
+                        <button type="button" class="btn btn-outline-success"><i class="bi bi-check-circle"></i></button>
+                        <button type="button" class="btn btn-outline-danger"><i class="bi bi-x-circle"></i></button>
                         <button type="button" class="btn btn-outline-warning"><i
                             class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-danger"><i class="bi bi-trash3"></i></button>
@@ -151,14 +166,15 @@
                     </td>
                   </tr>
                   <tr>
-                    <th>#TC-0005</th>
-                    <td>Project 5</td>
+                    <th>0005</th>
+                    <td><a href="projectDetail.html" class="text-primary">Project 5</a></td>
                     <td>1,000,0000</td>
                     <td>18/01/2021</td>
                     <td><span class="badge badge-success">Completed</span></td>
                     <td class="text-right">
                       <div class="btn-group" role="group" aria-label="actionsButton">
-                        <a class="btn btn-outline-info" href="logDetail.html"><i class="bi bi-eye"></i></a>
+                        <button type="button" class="btn btn-outline-success"><i class="bi bi-check-circle"></i></button>
+                        <button type="button" class="btn btn-outline-danger"><i class="bi bi-x-circle"></i></button>
                         <button type="button" class="btn btn-outline-warning"><i
                             class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-danger"><i class="bi bi-trash3"></i></button>
@@ -166,14 +182,15 @@
                     </td>
                   </tr>
                   <tr>
-                    <th>#TC-0006</th>
-                    <td>Project 6</td>
+                    <th>0006</th>
+                    <td><a href="projectDetail.html" class="text-primary">Project 6</a></td>
                     <td>1,000,0000</td>
                     <td>12/03/2021</td>
-                    <td><span class="badge badge-warning">In Guarantee</span></td>
+                    <td><span class="badge badge-warning">In Progress</span></td>
                     <td class="text-right">
                       <div class="btn-group" role="group" aria-label="actionsButton">
-                        <a class="btn btn-outline-info" href="logDetail.html"><i class="bi bi-eye"></i></a>
+                        <button type="button" class="btn btn-outline-success"><i class="bi bi-check-circle"></i></button>
+                        <button type="button" class="btn btn-outline-danger"><i class="bi bi-x-circle"></i></button>
                         <button type="button" class="btn btn-outline-warning"><i
                             class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-danger"><i class="bi bi-trash3"></i></button>
@@ -185,7 +202,7 @@
                   <tr>
                     <th>Letter ID</th>
                     <th>Project</th>
-                    <th>Amount</th>
+                    <th>BOQ Budget</th>
                     <th>Created Date</th>
                     <th>Status</th>
                     <th>Actions</th>
