[update] bog,iou,pj

--- a/templates/projectDetail.html
+++ b/templates/projectDetail.html
@@ -54,7 +54,7 @@
                     class="arrow icofont-dotted-down ms-auto text-end fs-5"></span></a>
                 <!-- Menu: Sub menu ul -->
                 <ul class="sub-menu collapse show" id="dashboard-Components">
-                  <li><a class="ms-link" href="#">
+                  <li><a class="ms-link" href="projectDetail.html">
                       <span>Project Dashboard</span></a></li>
                 </ul>
               </li>
@@ -67,7 +67,7 @@
                 <ul class="sub-menu collapse show" id="project-Components" style="">
                   <li><a class="ms-link" href="#"><span>Projects</span></a>
                   </li>
-                  <li><a class="ms-link" href="#"><span>BOQ</span></a>
+                  <li><a class="ms-link" href="boq.html"><span>BOQ</span></a>
                   </li>
                 </ul>
               </li>
