--- a/templates/IOUManagement.html
+++ b/templates/IOUManagement.html
@@ -53,14 +53,14 @@
             </div>
             <ul class="menu-list flex-grow-1 mt-3 list-unstyled">
               <li class="collapsed">
-                <a class="m-link active" data-bs-toggle="collapse" data-bs-target="#dashboard-Components" href="#">
+                <a class="m-link active" data-bs-toggle="collapse" data-bs-target="#dashboard-Components" href="IOUManagement.html">
                   <i class="icofont-home fs-5"></i> <span>IOU Management</span> <span
                     class="arrow icofont-dotted-down ms-auto text-end fs-5"></span></a>
                 <!-- Menu: Sub menu ul -->
                 <ul class="sub-menu collapse show" id="dashboard-Components">
                   <li><a class="ms-link" href="iouRequestForm.html">
                       <span>IOU Request Form</span></a></li>
-                  <li><a class="ms-link" href="IOUManagement.html">
+                  <li><a class="ms-link" href="iouView.html">
                       <span>IOU Review</span></a></li>
                   <li><a class="ms-link" href="#">
                       <span>IOU Approve</span></a></li>
