--- a/templates/iouRequestForm.html
+++ b/templates/iouRequestForm.html
@@ -52,14 +52,14 @@
             </div>
             <ul class="menu-list flex-grow-1 mt-3 list-unstyled">
               <li class="collapsed">
-                <a class="m-link active" data-bs-toggle="collapse" data-bs-target="#dashboard-Components" href="#">
+                <a class="m-link active" data-bs-toggle="collapse" data-bs-target="#dashboard-Components" href="IOUManagement.html">
                   <i class="icofont-home fs-5"></i> <span>IOU Management</span> <span
                     class="arrow icofont-dotted-down ms-auto text-end fs-5"></span></a>
                 <!-- Menu: Sub menu ul -->
                 <ul class="sub-menu collapse show" id="dashboard-Components">
                   <li><a class="ms-link" href="iouRequestForm.html">
                       <span>IOU Request Form</span></a></li>
-                  <li><a class="ms-link" href="IOUManagement.html">
+                  <li><a class="ms-link" href="iouView.html">
                       <span>IOU Review</span></a></li>
                   <li><a class="ms-link" href="#">
                       <span>IOU Approve</span></a></li>
@@ -234,6 +234,12 @@
                   </select>
                 </div>
               </div>
+              <div class="form-group row">
+                <label for="paymentMethod" class="col-2 col-form-label">Upload Invoices</label>
+                <div class="col-6">
+                  <input type="file" name="" id="" accept=".jpg, .png" multiple required>
+                </div>
+              </div>
               <div class="form-group row mt-4">
                 <div class="offset-2 col-6">
                   <button name="submit" type="submit" class="btn btn-primary">บันทึก</button>
@@ -246,20 +252,7 @@
     </div>
   </div>
 
-
   <script src="../static/js/bootstrap.bundle.min.js"></script>
-  <script>
-    var options = {
-      pdfOpenParams: {
-        toolbar: '1'
-      },
-      fallbackLink: '<p>อุปกรณ์ของคุณไม่รองรับการดูไฟล์ .pdf หากต้องการดูผ่านหน้าเว็บให้เปิดเว็บผ่านคอมพิวเตอร์. หรือ: <a href="[url]">กดที่นี้</a> เพื่อเปิดในแท็บใหม่</p>'
-    };
-    PDFObject.embed("..\\storage\\test.pdf", "#pdfplace",
-      options);
-  </script>
-
-
 </body>
 
 </html>
