[fix] some visual

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
                 <div class="card w-100 noBackgroundColor border-0">
                     <div class="card-body text-white noBackgroundColor text-center">
                         <h1 class="display-2">A.C.E. Parts Co., Ltd.</h1>
-                        <img src="../static/image/tomas.webp" class="img-fluid w-75" style="opacity: 0.2;" alt="tomas">
+                        <!-- <img src="../static/image/tomas.webp" class="img-fluid w-75" style="opacity: 0.2;" alt="tomas"> -->
                     </div>
                 </div>
             </div>
