--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,7 +14,7 @@
                 <a class="nav-link" href="projectManagement.html">Project Management</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Supplier Management</a>
+                <a class="nav-link" href="supplierManagement.html">Supplier Management</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="LOGManagement.html">Letter Of Guatantee</a>
@@ -23,12 +23,15 @@
                 <a class="nav-link" href="IOUManagement.html">IOU</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">ACCOUNTS</a>
+                <a class="nav-link" href="account.html">Accounts</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="report.html">Reports</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto d-flex align-items-center">
             <p class="mt-3"><i class="bi bi-telephone-fill"></i> TEL: +662-001-1156</p>
-            <a class="btn btn-outline-light mx-5" type="button"><span class="mx-5 rounded-pill">LOG IN</span></a>
+            <a class="btn btn-outline-light mx-5" type="button" href="login.html"><span class="mx-5 rounded-pill">LOG IN</span></a>
         </ul>
     </div>
 </nav>
