--- a/static/custom.css
+++ b/static/custom.css
@@ -16,3 +16,42 @@ body{
 a{
     color: #fff;
 }
+.require-star {
+    color: #f00;
+}
+.text-decoration-none,
+.text-decoration-none:link,
+.text-decoration-none:visited,
+.text-decoration-none:hover,
+.text-decoration-none:active {
+    text-decoration: none;
+}
+.project-transaction-image {
+    border: 1px solid #b8b8b8;
+    border-radius: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    padding: 6px;
+}
+.position-text {
+    color: #b8b8b8;
+}
+.date-text {
+    color: #666666;
+    margin-top: 8px;
+}
+.card-grey {
+    background-color: rgba(41,40,111,1);
+    border: 4px solid rgba(81,80,151,1);
+    border-radius: 8px;
+    color: #fff;
+}
+.big-icon {
+    background-color: #fff;
+    border-radius: 100%;
+    width: 75px;
+    height: 75px;
+    margin-bottom: 16px;
+    color: black;
+    font-size: 30px;
+}
